--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </header>
 
  <!-- Main Content (Hero Section) -->
-<main class="flex items-center justify-center h-screen bg-gray-900 text-white px-6">
+<main class="flex items-center justify-center h-screen text-gray-300 px-6">
     <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between space-y-8 lg:space-y-0 lg:space-x-8">
       <!-- Texto -->
       <div class="lg:w-1/2 text-center lg:text-left animate-fade-in-left">
