--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </header>
 
  <!-- Main Content (Hero Section) -->
-<main class="flex items-center justify-center h-screen text-gray-300 px-6">
+<main class="flex items-center justify-center h-screen text-gray-800 px-6">
     <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between space-y-8 lg:space-y-0 lg:space-x-8">
       <!-- Texto -->
       <div class="lg:w-1/2 text-center lg:text-left animate-fade-in-left">
@@ -67,8 +67,7 @@
           Ingeniero de Sistemas y Desarrollador Web
         </h2>
         <p class="text-gray-400 mt-4 leading-relaxed">
-          Soy un apasionado de la tecnología, especializado en crear soluciones innovadoras y funcionales. Con experiencia en herramientas modernas como <span class="font-semibold text-orange-500">Angular</span> y <span class="font-semibold text-orange-500">Node.js</span>, me enfoco en desarrollar aplicaciones web que combinan diseño, rendimiento y usabilidad. 
-          Estoy siempre en busca de nuevos retos que impulsen el desarrollo tecnológico.
+          Soy un apasionado de la tecnología, especializado en crear soluciones innovadoras y funcionales. Con experiencia en herramientas modernas como <span class="font-semibold text-orange-500">Angular</span> y <span class="font-semibold text-orange-500">Node.js</span>
         </p>
         <div class="mt-6">
           <a href="#contacto" class="bg-orange-500 text-white px-6 py-3 rounded-full shadow-lg hover:bg-orange-600 mr-4 transition-all duration-300">Contáctame</a>
