--- a/index.html
+++ b/index.html
@@ -55,34 +55,39 @@
   </header>
 
  <!-- Main Content (Hero Section) -->
-<main class="flex items-center justify-center h-screen text-gray-800 px-6">
-    <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between space-y-8 lg:space-y-0 lg:space-x-8">
+<main class="flex items-center justify-center min-h-screen text-gray-800 px-6">
+    <div class="container mx-auto flex flex-col-reverse lg:flex-row items-center justify-between space-y-8 lg:space-y-0 lg:space-x-8">
       <!-- Texto -->
-      <div class="lg:w-1/2 text-center lg:text-left animate-fade-in-left">
+      <div class="lg:w-1/2 text-center lg:text-left animate-fade-in-left mt-8 lg:mt-0">
         <p class="text-lg text-gray-900">¡Hola, soy</p>
-        <h1 class="text-4xl font-bold mt-2 leading-tight text-orange-500">
+        <h1 class="text-3xl md:text-4xl font-bold mt-2 leading-tight text-orange-500">
           Royder Millares
         </h1>
-        <h2 class="text-3xl font-semibold text-gray-800 mt-2">
+        <h2 class="text-2xl md:text-3xl font-semibold text-gray-800 mt-2">
           Ingeniero de Sistemas y Desarrollador Web
         </h2>
-        <p class="text-gray-400 mt-4 leading-relaxed">
-          Soy un apasionado de la tecnología, especializado en crear soluciones innovadoras y funcionales. Con experiencia en herramientas modernas como <span class="font-semibold text-orange-500">Angular</span> y <span class="font-semibold text-orange-500">Node.js</span>
+        <p class="text-gray-600 mt-4 leading-relaxed">
+          Soy un apasionado de la tecnología, especializado en crear soluciones innovadoras y funcionales. Con experiencia en herramientas modernas como <span class="font-semibold text-orange-500">Angular</span> y <span class="font-semibold text-orange-500">Node.js</span>.
         </p>
-        <div class="mt-6">
-          <a href="#contacto" class="bg-orange-500 text-white px-6 py-3 rounded-full shadow-lg hover:bg-orange-600 mr-4 transition-all duration-300">Contáctame</a>
-          <a href="#proyectos" class="border-2 border-orange-500 text-orange-500 px-6 py-3 rounded-full shadow-lg hover:bg-orange-100 transition-all duration-300">Mis Proyectos</a>
+        <div class="mt-6 flex flex-col md:flex-row gap-4">
+          <a href="#contacto" class="bg-orange-500 text-white px-6 py-3 rounded-full shadow-lg hover:bg-orange-600 transition-all duration-300">
+            Contáctame
+          </a>
+          <a href="#proyectos" class="border-2 border-orange-500 text-orange-500 px-6 py-3 rounded-full shadow-lg hover:bg-orange-100 transition-all duration-300">
+            Mis Proyectos
+          </a>
         </div>
       </div>
-      
+  
       <!-- Imagen -->
-      <div class="lg:w-1/2 mt-8 lg:mt-0 animate-fade-in-right">
-        <div class="w-80 h-80 mx-auto">
+      <div class="lg:w-1/2 animate-fade-in-right">
+        <div class="w-48 h-48 md:w-64 md:h-64 lg:w-80 lg:h-80 mx-auto">
           <img src="assets/perfil.jpeg" alt="Royder Millares" class="rounded-full w-full h-full object-cover shadow-lg">
         </div>
       </div>
     </div>
   </main>
+  
   
 <!-- Resumen Profesional -->
 <section id="resumen" class="bg-gray-100 py-16">
@@ -256,7 +261,7 @@
       <div class="text-center">
         <h2 class="text-4xl font-bold text-gray-800 mb-6 animate-fade-in-down">Certificaciones</h2>
         <p class="text-lg text-gray-600 max-w-2xl mx-auto animate-fade-in-up">
-          Reconocimientos y certificaciones que avalan mi experiencia en tecnologías y metodologías clave para el desarrollo y la gestión de proyectos.
+          Estas certificaciones avalan mis conocimientos en tecnologías clave y metodologías modernas, esenciales para el desarrollo y la gestión de proyectos exitosos.
         </p>
       </div>
   
@@ -264,8 +269,8 @@
       <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 animate-fade-in-up">
         <!-- Certificación 1 -->
         <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">Certificado de Desarrollo Web Avanzado</h3>
-          <p class="text-gray-600">Udemy, 2023</p>
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">GitHub - Advanced Collaboration Techniques</h3>
+          <p class="text-gray-600">GitHub Training Team, 2023</p>
           <div class="mt-4">
             <a href="#" class="text-orange-500 font-medium hover:text-orange-600 transition-all">Ver Certificado</a>
           </div>
@@ -273,8 +278,8 @@
   
         <!-- Certificación 2 -->
         <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">Scrum Fundamentals Certified</h3>
-          <p class="text-gray-600">Scrum Alliance, 2022</p>
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">Angular - Desarrollo de Aplicaciones</h3>
+          <p class="text-gray-600">Udemy, 2023</p>
           <div class="mt-4">
             <a href="#" class="text-orange-500 font-medium hover:text-orange-600 transition-all">Ver Certificado</a>
           </div>
@@ -282,8 +287,8 @@
   
         <!-- Certificación 3 -->
         <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">Certificación en AWS Cloud Practitioner</h3>
-          <p class="text-gray-600">AWS, 2021</p>
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">Scrum Fundamentals Certified</h3>
+          <p class="text-gray-600">Scrum Alliance, 2022</p>
           <div class="mt-4">
             <a href="#" class="text-orange-500 font-medium hover:text-orange-600 transition-all">Ver Certificado</a>
           </div>
@@ -291,14 +296,15 @@
       </div>
     </div>
   </section>
-  <!-- Reconocimientos y Logros -->
+  
+ <!-- Reconocimientos y Logros -->
 <section id="logros" class="bg-white py-16">
     <div class="container mx-auto px-6 lg:px-20">
       <!-- Título -->
       <div class="text-center">
         <h2 class="text-4xl font-bold text-gray-800 mb-6 animate-fade-in-down">Reconocimientos y Logros</h2>
         <p class="text-lg text-gray-600 max-w-2xl mx-auto animate-fade-in-up">
-          A lo largo de mi carrera, he tenido la oportunidad de participar y destacar en competencias y eventos tecnológicos. Aquí algunos de los logros más importantes:
+          A lo largo de mi carrera, he tenido la oportunidad de participar y destacar en competencias y eventos tecnológicos. Estos son algunos de los logros más destacados:
         </p>
       </div>
   
@@ -306,8 +312,10 @@
       <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Logro 1 -->
         <div class="bg-gray-100 rounded-lg shadow-lg p-6 animate-fade-in-up">
-          <img src="assets/acm-tarija.jpeg" alt="ACM Tarija 2024" class="rounded-md mb-4">
-          <h3 class="text-2xl font-semibold text-gray-800">Participación en ACM 2024</h3>
+          <div class="aspect-w-16 aspect-h-9">
+            <img src="assets/acm1.jpeg" alt="ACM Tarija 2024" class="rounded-md object-cover w-full h-full">
+          </div>
+          <h3 class="text-2xl font-semibold text-gray-800 mt-4">Participación en ACM 2024</h3>
           <p class="text-gray-700 mt-2">
             Clasifiqué en la competencia regional ACM 2024 y representé a Bolivia en la fase Latinoamericana realizada en Tarija. Una experiencia enriquecedora en resolución de problemas algorítmicos.
           </p>
@@ -315,24 +323,29 @@
   
         <!-- Logro 2 -->
         <div class="bg-gray-100 rounded-lg shadow-lg p-6 animate-fade-in-up">
-          <img src="assets/hackaton-agetic.jpeg" alt="Hackatón AGETIC Tarija" class="rounded-md mb-4">
-          <h3 class="text-2xl font-semibold text-gray-800">Hackatón AGETIC - Tarija</h3>
+          <div class="aspect-w-16 aspect-h-9">
+            <img src="assets/agetic1.jpeg" alt="Hackatón AGETIC Tarija" class="rounded-md object-cover w-full h-full">
+          </div>
+          <h3 class="text-2xl font-semibold text-gray-800 mt-4">Hackatón AGETIC - Tarija</h3>
           <p class="text-gray-700 mt-2">
             Participé en el Hackatón organizado por la AGETIC en Tarija, desarrollando soluciones innovadoras en tecnología cívica. Este evento me permitió conectar con profesionales y compartir ideas.
           </p>
         </div>
   
-        <!-- Logro 3 (Opcional, agrega más si es necesario) -->
+        <!-- Logro 3 -->
         <div class="bg-gray-100 rounded-lg shadow-lg p-6 animate-fade-in-up">
-          <img src="assets/logro-adicional.jpeg" alt="Logro Adicional" class="rounded-md mb-4">
-          <h3 class="text-2xl font-semibold text-gray-800">Otro Logro Destacado</h3>
+          <div class="aspect-w-16 aspect-h-9">
+            <img src="assets/startup.jpeg" alt="Bootcamp de Startup" class="rounded-md object-cover w-full h-full">
+          </div>
+          <h3 class="text-2xl font-semibold text-gray-800 mt-4">Bootcamp de Startups - UPSA</h3>
           <p class="text-gray-700 mt-2">
-            [Puedes describir algún otro premio, certificación o participación importante que resalte tu perfil profesional.]
+            Participé en el Bootcamp de Startups organizado por la UPSA en 2023, donde desarrollé ideas innovadoras y aprendí estrategias clave para emprender en tecnología.
           </p>
         </div>
       </div>
     </div>
   </section>
+  
   <!-- Intereses y Pasiones -->
 <section id="intereses" class="bg-gray-50 py-16">
     <div class="container mx-auto px-6 lg:px-20">
@@ -348,7 +361,7 @@
       <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Interés 1 -->
         <div class="bg-white p-6 rounded-lg shadow-lg animate-fade-in-up">
-          <img src="assets/ensenanza.jpg" alt="Enseñanza" class="rounded-md mb-4">
+          <img src="assets/curso.jpeg" alt="Enseñanza" class="rounded-md mb-4">
           <h3 class="text-2xl font-semibold text-gray-800">Enseñanza y Mentoring</h3>
           <p class="text-gray-700 mt-2">
             Soy apasionado por compartir conocimientos, ya sea mediante mentorías o como profesor. Creo que la educación es clave para transformar el futuro.
@@ -357,7 +370,7 @@
   
         <!-- Interés 2 -->
         <div class="bg-white p-6 rounded-lg shadow-lg animate-fade-in-up">
-          <img src="assets/aprendizaje.jpg" alt="Aprendizaje Continuo" class="rounded-md mb-4">
+          <img src="assets/curso1.jpeg" alt="Aprendizaje Continuo" class="rounded-md mb-4">
           <h3 class="text-2xl font-semibold text-gray-800">Aprendizaje Continuo</h3>
           <p class="text-gray-700 mt-2">
             Siempre estoy en la búsqueda de nuevas tecnologías, tendencias y habilidades que me permitan crecer y mejorar como profesional.
@@ -366,7 +379,7 @@
   
         <!-- Interés 3 -->
         <div class="bg-white p-6 rounded-lg shadow-lg animate-fade-in-up">
-          <img src="assets/desarrollo-tecnologia.jpg" alt="Desarrollo de Tecnología" class="rounded-md mb-4">
+          <img src="assets/curso2.jpeg" alt="Desarrollo de Tecnología" class="rounded-md mb-4">
           <h3 class="text-2xl font-semibold text-gray-800">Desarrollo de la Tecnología en Bolivia</h3>
           <p class="text-gray-700 mt-2">
             Me motiva contribuir al crecimiento y fortalecimiento del ecosistema tecnológico en Bolivia, ayudando a crear soluciones innovadoras.
@@ -394,19 +407,19 @@
             <p class="text-lg text-gray-700 font-semibold">
               <i class="fas fa-envelope text-orange-500 mr-2"></i> Correo:
             </p>
-            <p class="text-gray-600">royder.millares@example.com</p>
+            <p class="text-gray-600">roydermillares84@gmail.com</p>
           </div>
           <div class="mb-6">
             <p class="text-lg text-gray-700 font-semibold">
               <i class="fas fa-phone-alt text-orange-500 mr-2"></i> Teléfono:
             </p>
-            <p class="text-gray-600">+591 123 456 789</p>
+            <p class="text-gray-600">+591 69295703</p>
           </div>
           <div>
             <p class="text-lg text-gray-700 font-semibold">
               <i class="fab fa-linkedin text-orange-500 mr-2"></i> LinkedIn:
             </p>
-            <a href="https://linkedin.com/in/royder-millares" target="_blank" class="text-orange-500 hover:text-orange-600 transition-all">
+            <a href="https://www.linkedin.com/in/roys-millares-1b26572a3/" target="_blank" class="text-orange-500 hover:text-orange-600 transition-all">
               linkedin.com/in/royder-millares
             </a>
           </div>
@@ -462,10 +475,10 @@
         <div class="space-y-4 animate-fade-in-up">
           <h3 class="text-xl font-semibold">Sígueme</h3>
           <div class="flex space-x-6">
-            <a href="https://linkedin.com/in/royder-millares" target="_blank" class="text-gray-400 hover:text-orange-500">
+            <a href="https://www.linkedin.com/in/roys-millares-1b26572a3/" target="_blank" class="text-gray-400 hover:text-orange-500">
               <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="https://github.com/royder-millares" target="_blank" class="text-gray-400 hover:text-orange-500">
+            <a href="https://github.com/RoyDevTEAM" target="_blank" class="text-gray-400 hover:text-orange-500">
               <i class="fab fa-github fa-2x"></i>
             </a>
             <a href="https://twitter.com/royder_millares" target="_blank" class="text-gray-400 hover:text-orange-500">
@@ -478,8 +491,8 @@
         <div class="space-y-4 animate-fade-in-up">
           <h3 class="text-xl font-semibold">Contacto</h3>
           <ul class="space-y-2">
-            <li><a href="mailto:royder.millares@example.com" class="hover:text-orange-500">royder.millares@example.com</a></li>
-            <li><a href="tel:+591123456789" class="hover:text-orange-500">+591 123 456 789</a></li>
+            <li><a href="mailto:royder.millares@example.com" class="hover:text-orange-500">roydermillares84@gmail.com</a></li>
+            <li><a href="tel:+591123456789" class="hover:text-orange-500">+591 69295703</a></li>
           </ul>
         </div>
       </div>
