--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
  <!-- Main Content (Hero Section) -->
 <main class="flex items-center justify-center min-h-screen text-gray-800 px-6">
-    <div class="container mx-auto flex flex-col-reverse lg:flex-row items-center justify-between space-y-8 lg:space-y-0 lg:space-x-8">
+    <div class="container mx-auto flex flex-col-reverse lg:flex-row items-center justify-between space-y-2 lg:space-y-0 lg:space-x-8">
       <!-- Texto -->
       <div class="lg:w-1/2 text-center lg:text-left animate-fade-in-left mt-8 lg:mt-0">
         <p class="text-lg text-gray-900">¡Hola, soy</p>
@@ -69,14 +69,10 @@
         <p class="text-gray-600 mt-4 leading-relaxed">
           Soy un apasionado de la tecnología, especializado en crear soluciones innovadoras y funcionales. Con experiencia en herramientas modernas como <span class="font-semibold text-orange-500">Angular</span> y <span class="font-semibold text-orange-500">Node.js</span>.
         </p>
-        <div class="mt-6 flex flex-col md:flex-row gap-4">
-          <a href="#contacto" class="bg-orange-500 text-white px-6 py-3 rounded-full shadow-lg hover:bg-orange-600 transition-all duration-300">
-            Contáctame
-          </a>
-          <a href="#proyectos" class="border-2 border-orange-500 text-orange-500 px-6 py-3 rounded-full shadow-lg hover:bg-orange-100 transition-all duration-300">
-            Mis Proyectos
-          </a>
-        </div>
+        <div class="mt-6">
+            <a href="#contacto" class="bg-orange-500 text-white px-6 py-3 rounded-full shadow-lg hover:bg-orange-600 mr-4 transition-all duration-300">Contáctame</a>
+            <a href="#proyectos" class="border-2 border-orange-500 text-orange-500 px-6 py-3 rounded-full shadow-lg hover:bg-orange-100 transition-all duration-300">Mis Proyectos</a>
+          </div>
       </div>
   
       <!-- Imagen -->
@@ -491,7 +487,7 @@
         <div class="space-y-4 animate-fade-in-up">
           <h3 class="text-xl font-semibold">Contacto</h3>
           <ul class="space-y-2">
-            <li><a href="mailto:royder.millares@example.com" class="hover:text-orange-500">roydermillares84@gmail.com</a></li>
+            <li><a href="mailto:roidermillares84@gmail.com" class="hover:text-orange-500">roidermillares84@gmail.com</a></li>
             <li><a href="tel:+591123456789" class="hover:text-orange-500">+591 69295703</a></li>
           </ul>
         </div>
